# TableSense-AI

./: .gitignore  Dockerfile  README.md  agent.py  app.py  datasetcreation_testdataset_polars.py  docker-compose.yml  main.py  polarstest.py  pyproject.toml  requirements.txt  smolagent.py
.github/workflows/: docker-image.yml
benchmark/: README.md  comparison_report_tabmwp.html  comparison_report_wiki_table.html  evaluate_example.py  evaluate_example_iterations.py  run_evaluation.py
benchmark/evaluator/: dataset_definition.py  eval_config.py  evaluation_cache.py  evaluator.py  helper.py  utils.py
benchmark/evaluator/metrics/: bertscore_metric.py  exact_match_metric.py  meteor_metric.py  metric.py  rogue_metric.py
benchmark/run_serialization_tabmwp/: examples_TabMWPSelection.html  examples_TabMWPSelection.json
benchmark/run_serialization_wikiquestions/: examples_WikiTableQuestionsSelection.html  examples_WikiTableQuestionsSelection.json
benchmark/run_smolagent_tabmwp/: examples_TabMWPSelection.html  examples_TabMWPSelection.json
benchmark/run_smolagent_wikitablequestion/: examples_WikiTableQuestionsSelection.html  examples_WikiTableQuestionsSelection.json
benchmark/tab_llm_datasets/: processing_datasets.ipynb
benchmark/tab_llm_datasets/custom-long-table/: dataset.py
benchmark/tab_llm_datasets/custom-long-table/table/: examples.json  table.csv
benchmark/tab_llm_datasets/freeform-table-qa/: dataset.py
benchmark/tab_llm_datasets/simple_test/: dataset.py
benchmark/tab_llm_datasets/simple_test/examples/: examples.json  pristine-unseen-tables.tsv
benchmark/tab_llm_datasets/tabmwp/: dataset.py
benchmark/tab_llm_datasets/tabmwp_selection/: dataset.py
benchmark/tab_llm_datasets/tabmwp_selection/tables/: TabMWP_selection.json
benchmark/tab_llm_datasets/tabmwp_selection/tables/csv-1/: 2047.csv  2047.html  2047.tsv  2048.csv  2048.html  2048.tsv  2049.csv  2049.html  2049.tsv  2050.csv  2050.html  2050.tsv  2051.csv  2051.html  2051.tsv  2052.csv  2052.html  2052.tsv  2053.csv  2053.html  2053.tsv  2054.csv  2054.html  2054.tsv  2055.csv  2055.html  2055.tsv  2057.csv  2057.html  2057.tsv  2058.csv  2058.html  2058.tsv  2059.csv  2059.html  2059.tsv  2060.csv  2060.html  2060.tsv  2061.csv  (+257 more)
benchmark/tab_llm_datasets/wiki_table_questions/: dataset.py
benchmark/tab_llm_datasets/wiki_table_questions_selection/: dataset.py
code_agents/: smolagent.py
docs/: poetry.md
input/: minimal.csv
scripts/: test_cache_html.py
serialization/: converter.py  main.py  serialization_agent.py
serialization/jinja_templates/: only_header.natural.jinja2
tablesense_ai/: app_streamlit.py  main.py
tablesense_ai/agent/: base.py
tablesense_ai/agent/code_agent/: langgraph_agent.py  langgraph_agent_working.py  smolagent.py
tablesense_ai/agent/rag/: Q3_Business_Review.md  indexer.py  retriever.py  sample_markdwon.md
tablesense_ai/agent/serialization/: converter.py  serialization_agent.py
tablesense_ai/agent/serialization/jinja_templates/: only_header.natural.jinja2
tablesense_ai/utils/: canonicaliser.py  performance.py
tests/: simple_agent.py  test_llm_exact_match.py
