[project]
name = "tablesense-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "smolagents[litellm] (>=1.14.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "litellm (>=1.67.7,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "openai (>=1.75.0,<2.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "langchain-core (>=0.3.56,<0.4.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "absl-py (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
