[project]
name = "tablesense-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "smolagents[litellm] (>=1.14.0,<2.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "litellm (>=1.67.7,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.7.1,<3.8)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.10.1,<=1.10.1)",
    "seaborn (>=0.12.2,<0.13.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "openai (>=1.75.0,<2.0.0)",
    "httpx-aiohttp (>=0.1.0,<1.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "huggingface-hub (>=0.33.4,<0.40.0)",
    "langchain-core (>=0.3.56,<0.4.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "absl-py (>=2.3.0,<3.0.0)",
    #"boto3 (>=1.38.46,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    #"pandasai (>=2.3.0,<3.0.0)",
    "pandas (>=2.2.0)", # ==1.5.3 >=2.2.0
    "cython (>=3.1.1,<4.0.0)",
    "numpy (>=1.26.2)",
    "langchain-milvus (>=0.2.1,<0.3.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pymilvus[model] (>=2.6.0,<3.0.0)",
    "boto3 (>=1.40.21,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pandasai-litellm (>=0.0.1,<0.0.2)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "tablesense_ai" }
]